# pyresearch

./: .gitignore  Makefile  README.md  pyproject.toml
outputs/2024-02-10/21-42-07/.hydra/: hydra.yaml
outputs/2024-02-10/21-43-32/.hydra/: config.yaml  hydra.yaml
outputs/2024-02-10/21-45-26/.hydra/: hydra.yaml
outputs/2024-02-10/21-46-47/.hydra/: hydra.yaml
src/: main.py
src/config/: config.py
src/config/Yaml/: config.yaml
src/data/: README.md
